feat: unigale managed long-running tasks

--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,8 @@
     }
   ],
   "require": {
+    "ext-pcntl": "*",
+    "ext-posix": "*",
     "php": "^8.3",
     "laravel/framework": "^12.8",
     "unigale/support": "*"
