--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
   "require": {
     "ext-pcntl": "*",
     "ext-posix": "*",
-    "php": "^8.3",
+    "php": "^8.4",
+    "nunomaduro/termwind": "^2.0",
     "laravel/framework": "^12.41",
     "epsicube/support": "*"
   },
